--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_install:
 script:
   - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("MetaTools"))`); Pkg.pin("MetaTools"); Pkg.resolve()'
   - julia -e 'using MetaTools; @assert isdefined(:MetaTools); @assert typeof(MetaTools) === Module'
-  - julia ./run_tests.jl
+  - julia test/runtests.jl
